--- a/a.bib
+++ b/a.bib
@@ -369,7 +369,7 @@ publisher={JSTOR}
   organization={ACM}
 }
 
-@INPROCEEDINGS{EMMSB, crossref = {gopalan2013efficient} }
+@INPROCEEDINGS{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
     title={Efficient discovery of overlapping communities in massive networks},
     author={Gopalan, Prem K and Blei, David M},
@@ -421,4 +421,43 @@ publisher={JSTOR}
     pages={058701},
     year={2003},
     publisher={APS}
+}
+@inproceedings{menon2011link,
+    title={Link prediction via matrix factorization},
+    author={Menon, Aditya Krishna and Elkan, Charles},
+    booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+    pages={437--452},
+    year={2011},
+    organization={Springer}
+}
+@article{orbanz2015bayesian,
+    title={Bayesian models of graphs, arrays and other exchangeable random structures},
+    author={Orbanz, Peter and Roy, Daniel M},
+    journal={IEEE transactions on pattern analysis and machine intelligence},
+    volume={37},
+    number={2},
+    pages={437--461},
+    year={2015},
+    publisher={IEEE}
+}
+
+@article{diaconis1979conjugate,
+    title={Conjugate priors for exponential families},
+    author={Diaconis, Persi and Ylvisaker, Donald and others},
+    journal={The Annals of statistics},
+    volume={7},
+    number={2},
+    pages={269--281},
+    year={1979},
+    publisher={Institute of Mathematical Statistics}
+}
+@article{clauset2009power,
+    title={Power-law distributions in empirical data},
+    author={Clauset, Aaron and Shalizi, Cosma Rohilla and Newman, Mark EJ},
+    journal={SIAM review},
+    volume={51},
+    number={4},
+    pages={661--703},
+    year={2009},
+    publisher={SIAM}
 }
