--- a/appendix.tex
+++ b/appendix.tex
@@ -78,3 +78,8 @@ Finally, when the markov chain reach the stationnary distribution, the models pa
 
 
 The count for node $i$ being assigned to membership $k$ is $N_{ik}$. And the count of for all couple of classes $c=(k,k')$ being associated to relation $r$ is $M_{cr}$. Note that in our case, the relation $r$ take values in (0,1) accounting for link or non-link between two node.
+
+\section{Precision Recall Results}
+\label{sec:precision_recall}
+
+\input{table_results}
